# safe_cli

./: Cargo.toml  DESIGN.md  LICENSE  README.md
src/: app.rs  authenticator.rs  crypto.rs  helpers.rs  lib.rs  main.rs
tests/: safe_authenticator_service_integration.rs
