[package]
name = "safe_authenticatord"
version = "0.2.0"
authors = ["hunterlester <guilfordhunter@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
clap = "2.25.1"
console = "0.6.1"
futures = "0.1"
rand = "0.6.5"
safe_authenticator = { git = "https://github.com/hunterlester/safe_client_libs", path = "safe_authenticator", branch = "safe_authenticator-0.9.0-upgrades" } 
safe_core = { git = "https://github.com/hunterlester/safe_client_libs", path = "safe_core", branch = "safe_authenticator-0.9.0-upgrades" }
serde_derive = "1.0.89"
serde_json = "1.0"
zxcvbn = "1.0.0"

[features]
testing = ["safe_authenticator/testing"]
use-mock-routing = ["safe_authenticator/use-mock-routing"]
default = ["use-mock-routing"]

[[bin]]
name = "safe_cli"
path = "src/safe_cli/bin/main.rs"

[[bin]]
name = "safe_authenticatord"
path = "src/main.rs"
